EPMRPP-61003  Fixed visibility of Comment icon (#2653)
* EPMRPP-61003  Fixed visibility of Comment icon

* EPMRPP-61003  Fixed comment

--- a/app/src/pages/inside/stepPage/modals/editDefectModals/makeDecisionModal/optionsStepForm/optionsStepForm.scss
+++ b/app/src/pages/inside/stepPage/modals/editDefectModals/makeDecisionModal/optionsStepForm/optionsStepForm.scss
@@ -34,6 +34,7 @@
 .comment-block {
   display: flex;
   max-width: 630px;
+  margin-bottom: 23px;
 }
 
 .comment {
@@ -42,7 +43,6 @@
 
 .analysis-block {
   display: flex;
-  margin-top: 23px;
 }
 
 .icon {
